--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <title>AI Poses MASTER</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+/>
 
   <!-- базовые стили проекта -->
   <link rel="stylesheet" href="./assets/css/style.css" />
